# MetaHackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.gold.yml  docker-compose.silver.yml  docker-compose.tier2.yml  docker-compose.tier3.yml  docker-compose.yml  nginx.conf  pyproject.toml  run.py  test.html
.github/workflows/: cd-deploy.yml  ci-cd.yml  ci-lint.yml  ci-test.yml  ci.yml
alertmanager/: alertmanager.yml
app/: __init__.py  cache.py  database.py  telemetry.py
app/data/: events.csv  urls.csv  users.csv
app/models/: event.py  url.py  user.py
app/routes/: __init__.py  auth.py  events.py  links.py  redirect.py  urls.py  users.py
docs/: BOTTLENECK_REPORT.md  failure-modes.md
docs/reliability/: error-handling.md  failure-modes.md
frontend/: next.config.ts  package-lock.json
frontend/docker/: Dockerfile
frontend/src/: middleware.ts
grafana/dashboards/: critical-alerts.json  golden-signals.json  overview.json
k6-testing/: README.md  load_test.js  load_test_tier2.js  load_test_tier3.js
loki/: config.yml
migrations/: 001_initial.py
nginx/: nginx.gold.conf
otel/: config.yaml
prometheus/: alerts.yml  blackbox.yml  process-exporter.yml  prometheus.yml
promtail/: config.yml
scripts/: create_test_user.py  init_db.py  run_migrations.py  test_tier2.sh
scripts/k6/: gold-max.js  gold-tsunami.js  smoke.js
tests/: conftest.py  test_events.py  test_health.py  test_integration.py  test_unit.py  test_urls.py  test_users.py
tests/integration/: test_events.py  test_integration.py  test_urls.py  (+1 more)
(+10 files in other folders)
